deployment/nodejs-nestjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-nestjs
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nodejs-nestjs
  template:
    metadata:
      labels:
        app: nodejs-nestjs
    spec:
      containers:
        - image: nodejs-nestjs:latest
          name: nodejs-nestjs
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
