deployment/nodejs-nestjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-nestjs
  namespace: app
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: nodejs-nestjs
