deployment/nodejs-nestjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-nestjs
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs-nestjs.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-nestjs
                port:
                  number: 80
